# QuizTool

./: .gitignore  AGENTS.md  GENERATOR_UPDATES.md  QUICKSTART.md  README.md  ai-assistant-engine.js  bank-engine.js  bank-maker.html  build_exe.py  db-helper.js  engine-shared.js  extract.py  flashcard-editor.html  flashcard-engine.js  flashcard-maker.html  flashcard-template.html  flashcard-test.html  generate_icons.py  generate_project.py  index-editor.html  index-engine.css  index-engine.js  index-template.html  index.html  js-question-bank.html  manifest.webmanifest  osce-cardio.html  osce-engine.js  osce-pediatrics.html  osce-template.html  osce-test.html  osce-thalassemia.html  pdf-exporter.html  question-bank-template.html  quiz-combiner.html  quiz-editor.html  quiz-engine.js  quiz-maker-js.html  quiz-maker.html  quiz-template.html  (+9 more)
assets/: manifest.webmanifest
engines/: ai-assistant-engine.js  bank-engine.js  dash-ui.js  engine-common.js  engine-highlights.js  engine-shared.css  engine-shared.js  engine-tracker.js  flashcard-engine.js  index-engine.css  index-engine.js  osce-engine.js  quiz-engine.js  sync-engine.js  sync-engine.src.js  tracker-storage.js  uworld-engine.js  written-engine.js
generator_templates/: index.html
quizes/: quiz-template 60 cont.html  quiz-template.html
scripts/: admin-dashboard.py  build_sync_engine.ps1  download_pdf_fonts.py  ensure_pdf_deps.py  pdf_generator.py  pdf_generator_pyodide.py  standardize_quiz_files.py  sync_quiz_assets.py
tauri/: Cargo.toml  tauri.conf.json
tauri-admin/: Cargo.toml  build.rs  extract_html.py  patch_html.py  tauri.conf.json  verify_html.py
tauri-admin/frontend/: flashcard-engine.js  index.html  pdf-exporter.html
tauri-admin/src/: commands.rs  deploy.rs  git.rs  main.rs  parser.rs  pdf.rs  server.rs  sync.rs  templates.rs
tauri/frontend/: index.html
tauri/src/: api_helpers.rs  engines.rs  generator.rs  main.rs
tests/: osce-helpers.test.js  setup.js
(+3 files in other folders)
