[package]
name = "quiztool-admin"
version = "1.0.0"
description = "QuizTool Admin Dashboard — Standalone Desktop App"
authors = ["QuizTool"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2.5"
chrono = "0.4"
base64 = "0.22"
percent-encoding = "2.3.1"
sha2 = "0.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
