[package]
name = "quiztool-admin"
version = "1.0.0"
description = "QuizTool Admin Dashboard — Native Tauri v2 desktop app (no Python required)"
authors = ["QuizTool"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
zip = "2"
portpicker = "0.1.1"
open = { version = "5.3.5", features = ["shellexecute-on-windows"] }
tiny_http = "0.12"
notify = { version = "7", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
