[package]
name = "quiztool-tauri"
version = "1.0.0"
description = "QuizTool Generator — Fully Standalone Native Desktop App (no Python, no sidecar)"
authors = ["QuizTool"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
sha2 = "0.10"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
regex = "1"
chrono = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"